# clipit-skill

./: .gitignore  CLIPIT_PRD.md  LICENSE  README.md  README_EN.md  clipit.md  pyproject.toml
.agents/skills/clipit/: SKILL.md
.claude/skills/clipit/: CLAUDE.md  SKILL.md
clipit/: __init__.py  clean.py  cli.py  install.py  splice.py  transcribe.py  validate.py
